PIXI is working, we have a moving star field (based on a png texture for the time being)

--- a/package.json
+++ b/package.json
@@ -26,11 +26,16 @@
 	"bugs": {
 		"url": "https://github.com/iamgrid/sublight-patrol/issues"
 	},
-	"homepage": "https://github.com/iamgrid/sublight-patrol#readme",
+	"homepage": "https://iamgrid.co.uk/sublight-patrol",
 	"devDependencies": {
+		"@babel/core": "^7.11.6",
+		"@babel/preset-env": "^7.11.5",
+		"babel-loader": "^8.1.0",
 		"clean-webpack-plugin": "^3.0.0",
 		"copy-webpack-plugin": "^6.1.1",
 		"css-loader": "^4.3.0",
+		"eslint": "^7.10.0",
+		"eslint-plugin-import": "^2.22.1",
 		"html-webpack-plugin": "^4.5.0",
 		"mini-css-extract-plugin": "^0.11.2",
 		"optimize-css-assets-webpack-plugin": "^5.0.4",
@@ -38,5 +43,20 @@
 		"webpack-cli": "^3.3.12",
 		"webpack-dev-server": "^3.11.0",
 		"webpack-merge": "^5.1.4"
+	},
+	"dependencies": {
+		"@pixi/app": "^5.3.3",
+		"@pixi/constants": "^5.3.3",
+		"@pixi/core": "^5.3.3",
+		"@pixi/graphics": "^5.3.3",
+		"@pixi/graphics-extras": "^5.3.3",
+		"@pixi/loaders": "^5.3.3",
+		"@pixi/math": "^5.3.3",
+		"@pixi/runner": "^5.3.3",
+		"@pixi/settings": "^5.3.3",
+		"@pixi/sprite": "^5.3.3",
+		"@pixi/sprite-tiling": "^5.3.3",
+		"@pixi/ticker": "^5.3.3",
+		"@pixi/utils": "^5.3.3"
 	}
 }
