Created ParticleContainer version of the Starscape

--- a/package.json
+++ b/package.json
@@ -49,9 +49,9 @@
 		"@pixi/constants": "^5.3.3",
 		"@pixi/core": "^5.3.3",
 		"@pixi/graphics": "^5.3.3",
-		"@pixi/graphics-extras": "^5.3.3",
 		"@pixi/loaders": "^5.3.3",
 		"@pixi/math": "^5.3.3",
+		"@pixi/particles": "^5.3.3",
 		"@pixi/runner": "^5.3.3",
 		"@pixi/settings": "^5.3.3",
 		"@pixi/sprite": "^5.3.3",
