Spritesheet functioning, player ship moving based on keyboard input

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"@pixi/app": "^5.3.3",
 		"@pixi/constants": "^5.3.3",
 		"@pixi/core": "^5.3.3",
+		"@pixi/display": "^5.3.3",
 		"@pixi/graphics": "^5.3.3",
 		"@pixi/loaders": "^5.3.3",
 		"@pixi/math": "^5.3.3",
