Spawning is working

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 		"@pixi/sprite-tiling": "^5.3.3",
 		"@pixi/ticker": "^5.3.3",
 		"@pixi/utils": "^5.3.3",
-		"pixi.js-keyboard": "^1.0.9"
+		"pixi.js-keyboard": "^1.0.9",
+		"uuid": "^8.3.1"
 	}
 }
