--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"html-webpack-plugin": "^4.5.0",
 		"mini-css-extract-plugin": "^0.11.2",
 		"optimize-css-assets-webpack-plugin": "^5.0.4",
+		"url-loader": "^4.1.1",
 		"webpack": "^4.44.2",
 		"webpack-cli": "^3.3.12",
 		"webpack-dev-server": "^3.11.0",
