--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 		"@pixi/settings": "^5.3.3",
 		"@pixi/sprite": "^5.3.3",
 		"@pixi/sprite-tiling": "^5.3.3",
+		"@pixi/text": "^5.3.3",
 		"@pixi/ticker": "^5.3.3",
 		"@pixi/utils": "^5.3.3",
 		"pixi.js-keyboard": "^1.0.9",
