pixi-sound installed and working

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"@pixi/text": "^5.3.3",
 		"@pixi/ticker": "^5.3.3",
 		"@pixi/utils": "^5.3.3",
+		"pixi-sound": "^3.0.5",
 		"pixi.js-keyboard": "^1.0.9",
 		"uuid": "^8.3.1"
 	}
