--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sublight-patrol",
-	"version": "0.7.7",
+	"version": "0.7.8",
 	"description": "A side-scrolling shooter game built with PixiJS and Webpack.",
 	"main": "index.js",
 	"scripts": {
@@ -37,6 +37,7 @@
 		"css-loader": "^4.3.0",
 		"eslint": "^7.10.0",
 		"eslint-plugin-import": "^2.22.1",
+		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^4.5.0",
 		"mini-css-extract-plugin": "^0.11.2",
 		"optimize-css-assets-webpack-plugin": "^5.0.4",
