--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"clean-webpack-plugin": "^3.0.0",
 		"copy-webpack-plugin": "^6.1.1",
 		"css-loader": "^4.3.0",
+		"dotenv-webpack": "^8.0.1",
 		"eslint": "^7.10.0",
 		"eslint-plugin-import": "^2.22.1",
 		"file-loader": "^6.2.0",
