--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "webpack-dev-server --config webpack.dev.js",
+		"start": "cross-env NODE_OPTIONS=--openssl-legacy-provider webpack-dev-server --config webpack.dev.js",
 		"build": "npm --no-git-tag-version version patch && webpack --config webpack.prod.js",
 		"buildWoVersionBump": "webpack --config webpack.prod.js"
 	},
@@ -65,8 +65,8 @@
 		"@pixi/text": "^5.3.3",
 		"@pixi/ticker": "^5.3.3",
 		"@pixi/utils": "^5.3.3",
+		"nom-events": "^1.0.3",
 		"pixi-sound": "^3.0.5",
-		"pixi.js-keyboard": "^1.0.9",
 		"uuid": "^8.3.1"
 	}
 }
